# Ebike_Motor_Driver

./: README.md
code/EbikeDriver-Demo1/: CMakeLists.txt  EbikeDriver-Demo1.ioc  STM32G431XX_FLASH.ld  debug.cfg  stlink.cfg
code/EbikeDriver-Demo1/BSP/Motor/: BSP_Motor.c  BSP_Motor.h
code/EbikeDriver-Demo1/BSP/Signal/LED/: BSP_LED.c  BSP_LED.h  LED_Config.h
code/EbikeDriver-Demo1/BSP/communication/VOFA+/: BSP_VOFA.c  BSP_VOFA.h
code/EbikeDriver-Demo1/Core/Inc/: main.h  retarget.h  stm32g4xx_hal_conf.h
code/EbikeDriver-Demo1/Core/Src/: main.c  stm32g4xx_hal_msp.c
code/EbikeDriver-Demo1/CubeMX/: .mxproject  CMakeLists.txt  EbikeDriver-Demo1.ioc
code/EbikeDriver-Demo1/CubeMX/Core/Inc/: stm32g4xx_it.h
code/EbikeDriver-Demo1/CubeMX/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
code/EbikeDriver-Demo1/CubeMX/cmake/stm32cubemx/: CMakeLists.txt
code/EbikeDriver-Demo1/Drivers/STM32G4xx_HAL_Driver/Inc/: stm32g4xx_hal_usart.h  stm32g4xx_ll_usart.h
code/EbikeDriver-Demo1/Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal_usart.c
code/EbikeDriver-Demo1/Platform/Motor/: Motor_Config.h  Platform_Motor.c  Platform_Motor.h
code/EbikeDriver-Demo1/Platform/Signal/LED/: Platform_LED.c  Platform_LED.h
code/EbikeDriver-Demo1/Platform/Utils/Clark/: Clark.c  Clark.h
code/EbikeDriver-Demo1/Platform/Utils/PID/: PID.c  PID.h
code/EbikeDriver-Demo1/Platform/Utils/Park/: Park.c  Park.h
code/EbikeDriver-Demo1/Platform/Utils/SVPWM/: SVPWM.c  SVPWM.h
code/EbikeDriver-Demo1/Platform/communication/VOFA+/: Platform_VOFA.c  Platform_VOFA.h  VOFA_Config.h
code/EbikeDriver-Demo1/UserAPP/main/: UserApp.c  UserApp.h
pcb/CapacitorBoard/ver0.1/CapacitorBoardVer0.1/: CapacitorBoardVer0.1.PrjPcb  PCB1.PcbDoc  Sheet.SchDoc
pcb/CapacitorBoard/ver0.1/CapacitorBoardVer0.1/Project Outputs for CapacitorBoardVer0.1/: PCB1.DRL  PCB1.DRR  PCB1.EXTREP  PCB1.LDP  PCB1.REP  PCB1.TXT  PCB1.apr  PCB1_Copper_Signal_Bot.gbr  PCB1_Copper_Signal_Top.gbr  PCB1_Legend_Bot.gbr  PCB1_Legend_Top.gbr  PCB1_Mechanical_1.gbr  PCB1_Paste_Bot.gbr  PCB1_Paste_Top.gbr  PCB1_Profile.gbr  PCB1_Soldermask_Bot.gbr  PCB1_Soldermask_Top.gbr  Status Report.Txt
pcb/CapacitorBoard/ver0.1/CapacitorBoardVer0.1/STEP/: CapacitorBoardVer0.1.SLDASM  CapacitorBoardVer0.1.step
pcb/CapacitorBoard/ver0.1/CapacitorBoardVer0.1/__Previews/: Sheet.SchDocPreview
pcb/ControllorBoard/ver0.1/ControllorBoardVer0.1/: Connector.SchDoc  ControllorBoardVer0.1.OutJob  ControllorBoardVer0.1.PrjPcb  driver.SchDoc  mcu.SchDoc  power.SchDoc
pcb/ControllorBoard/ver0.1/ControllorBoardVer0.1/PnPout/: PCB.html
pcb/ControllorBoard/ver0.1/ControllorBoardVer0.1/Project Outputs for ControllorBoardVer0.1/: ControllorBoardVer0.1.xlsx  PCB-macro.APR_LIB  PCB.DRL  PCB.DRR  PCB.EXTREP  PCB.LDP  PCB.REP  PCB.TXT  PCB.apr  PCB_Copper_Signal_1.gbr  PCB_Copper_Signal_2.gbr  PCB_Copper_Signal_Bot.gbr  PCB_Copper_Signal_Top.gbr  PCB_Legend_Bot.gbr  PCB_Legend_Top.gbr  PCB_Mechanical_1.gbr  PCB_Paste_Bot.gbr  PCB_Paste_Top.gbr  PCB_Profile.gbr  PCB_Soldermask_Bot.gbr  PCB_Soldermask_Top.gbr  Status Report.Txt
pcb/ControllorBoard/ver0.1/ControllorBoardVer0.1/__Previews/: Connector.SchDocPreview  driver.SchDocPreview  mcu.SchDocPreview  power.SchDocPreview
pcb/Multiboard/Ver0.1/Ebike_Motor_Driver/: Ebike_Motor_Driver.PrjMbd  MultiBoardSchematic1.MbsDoc
pcb/PowerBoard/: OutLIne.DXF
pcb/PowerBoard/ver0.1/PowerBoardver0.1/: PCB1.PcbDoc  PowerBoardver0.1.PrjPcb  Sheet1.SchDoc
pcb/PowerBoard/ver0.1/PowerBoardver0.1/PnPout/: PCB1.html
pcb/PowerBoard/ver0.1/PowerBoardver0.1/Project Outputs for PowerBoardver0.1/: PCB1.DRL  PCB1.DRR  PCB1.EXTREP  PCB1.LDP  PCB1.REP  PCB1.TXT  PCB1.apr  PCB1_Copper_Signal_Bot.gbr  PCB1_Copper_Signal_Top.gbr  PCB1_Legend_Bot.gbr  PCB1_Legend_Top.gbr  PCB1_Mechanical_1.gbr  PCB1_Paste_Bot.gbr  PCB1_Paste_Top.gbr  PCB1_Profile.gbr  PCB1_Soldermask_Bot.gbr  PCB1_Soldermask_Top.gbr  Status Report.Txt
pcb/PowerBoard/ver0.1/PowerBoardver0.1/STEP/: PowerBoardver0.1.step
pcb/PowerBoard/ver0.1/PowerBoardver0.1/__Previews/: Sheet1.SchDocPreview
